tests/good/typing/045-case-pone.clap
** 'a -> int
val x = case { _ => 42 }
