tests/bad/lexical/066-case-12.clap
val x = 
  case { not (0 or _) and (_ or _ and 0) and ((_ or _) & 0) => 42 }
 
Fatal exception Failure("Unexpected '&'!")
